--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -193,9 +193,10 @@ h2 {
 }
 .fondo-inicio {
   background-image: url("../imagenes/fondoinicio.png");
-  width: 90rem;
+  width: 100%;
   height: 44.875rem;
   flex-shrink: 0;
+  padding: none;
 }
 
 
