--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,38 +1,103 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 body {
-  background-color: #ffffff;
+  background-color:#ffffff;
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-
-h1 {
-  color: #fff;
-  font-family: Poppins;
-  font-size: 4.375rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  letter-spacing: 0.21875rem;
+main {
+  margin-left: 2%;
 }
 
+.navbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
 
+input {
+  display: none;
+}
 
+.contenedor {
+  display: flex;
+}
+
+.columna {
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.imagen {
+  max-width: 100%;
+}
+
+.col-2 {
+  width: 50%;
+}
+
+@media (min-width: 701px) {
+  .footer {
+    position: fixed;
+    bottom: 0px;
+  }
+
+  .contenedor {
+    flex-flow: row nowrap;
+  }
+}
+
+@media (max-width: 700px) {
+  .integrante {
+    min-width: 100px;
+  }
+
+  .integrante {
+    min-width: 200px;
+  }
+
+  footer {
+    margin-top: 16px;
+  }
+
+  .contenedor {
+    flex-flow: column nowrap;
+  }
+
+  .col-2 {
+    width: 100%;
+  }
+
+  main {
+    min-height: 85vh;
+  }
+}
 button {
-  border-radius: 4.0625rem;
-  background: var(--COLOR-2, #1a4301);
-  width: 31.25rem;
-  height: 8.0625rem;
-  flex-shrink: 0;
+  font-family: "Poppins", sans-serif;
+  min-width: 25%;
+  padding: 2px;
+  color: #ffffff;
+  font-size: 19px;
+  border-radius: 10px;
+  border: 2px solid;
+  background: #1a4301;
+  cursor: pointer;
 }
 
-.datocurioso {
-  width: 90rem;
-  height: 45.25rem;
-  flex-shrink: 0;
+button:hover {
+  background: #000000;
+  color: #f8f9fa;
+}
+
+.datos-integrante {
+  flex-grow: 1;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 a {
@@ -40,43 +105,87 @@ a {
   color: #ffffff;
 }
 
-.texto-negro {
-  color: #000;
-  font-family: Poppins;
-  font-size: 1.375rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  letter-spacing: 0.06875rem;
+.integrante {
+  display: inline-block;
+  position: relative;
+  border-radius: 50%;
+  overflow: hidden;
+  width: 200px;
+  height: 200px;
 }
 
-a {
-  color: #000;
-  font-family: Poppins;
-  font-size: 1.5625rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 0.07813rem;
+.abi {
+  background-color: #e9e9e9;
 }
+
+.daniela {
+  background-color: #2a211a;
+}
+
+.integrante > img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  max-height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.contenedor-integrante {
+  display: flex;
+  flex-direction: row;
+  gap: 5%;
+  align-items: center;
+  margin: 16px;
+}
+.fondo-imagen {
+  background: url(../imagenes/foto\ home.png) no-repeat center bottom;
+  background-size: contain;
+  background-position: right;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding-left: 5%;
+  justify-content: center;
+}
+
 footer {
   width: 100%;
-  border-top: 1px solid var(--Color-5, #adb5bd);
+  margin-top: auto;
+  text-align: right;
+  border-top: 1px solid #e5ebf1;
+  background-color: white;
 }
 
-.pfooter {
+footer p {
+  font-size: 1rem;
   color: #6c757d;
-  font-family: Poppins;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  padding-right: 2%;
 }
-header {
+
+.header {
   position: sticky;
   top: 0;
   background-color: #ffffff;
+  display: flex;
+  flex-direction: row;
+  height: 14vh;
   z-index: 1;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 1rem;
+  font-weight: bold;
+  border-bottom: 1px solid #eff3f7;
+}
+
+.header-mobile {
+  position: sticky;
+  z-index: 1;
+  top: 0;
+  background-color: #ffffff;
+  width: 100%;
   border-bottom: 1px solid #eff3f7;
 }
 
@@ -86,118 +195,182 @@ header a {
   font-size: 1rem;
 }
 
-.logo {
-  width: 50%;
-  padding-left: 3%;
+header ul{
+  list-style: none;
 }
 
-header div {
-  gap: 2rem;
+.hamb {
+  display: none;
 }
 
+.side-menu {
+  display: none;
+}
 
+.menu a{
+  color: #000;
+  font-size: 1rem;
+  font-weight: 600;
+}
 
-/*TAL CUAL EL FIGMA*/
+.nav{
+  width: 100%;
+  position: fixed;
+  overflow: hidden;
+  background-color: #fff;
+  border-bottom: 1px solid #eff3f7;
+}
 
-p {
-  width: 44.75rem;
-  color: #fff;
-  font-family: Poppins;
-  font-size: 1.875rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  letter-spacing: 0.09375rem;
+.nav{
+  max-height: 0;
+  transition: max-height .5s ease-out;
+}
+
+.side-menu:checked ~ nav{
+  max-height: 50%;
+}
+
+.texto_construccion{
+    text-align: center;
+}
+
+h1 {
+  margin-left: 8rem; 
+  margin-right: 8rem; 
+  text-align: center;
+  margin-top: 5rem;
+  color: #245501;
 }
 
 h2 {
-  width: 44.1875rem;
-  height: 13.75rem;
-  flex-shrink: 0;
-  color: var(--COLOR-2, #1a4301);
-  font-family: Poppins;
-  font-size: 3.75rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  letter-spacing: 0.1875rem;
+      margin-left: 2rem; 
+      margin-right: 2rem; 
+      text-align: center;
+      margin-top: 2rem;
+      color: #245501;
 }
 
-.fondo-usuario {
-  background-image: url("../imagenes/fondousuario.png");
-  width: 100%;
-  height: auto;
-  flex-shrink: 0;
-}
-.fondo-negocio {
-  background-image: url("../imagenes/fondonegocio.png");
-  width: 100%;
-  height: auto;
-  flex-shrink: 0;
-}
-.textoblanco {
-  width: 29.75rem;
-  height: 28.3125rem;
-  flex-shrink: 0;
-  color: #fff;
-  font-family: Poppins;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  letter-spacing: 0.0625rem;
-}
-.mapaconceptual {
-  width: 41.25rem;
-  height: 16.98063rem;
-  flex-shrink: 0;
-}
-.untercio {
-  width: 90rem;
-  height: 44.875rem;
-  flex-shrink: 0;
-  background: url("../imagenes/untercio.png");
-}
-.mision {
-  color: #000;
-  font-family: Poppins;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: 0.0625rem;
+.texto {
+  font-size: 1rem;
+  margin-left: 8rem; 
+  margin-right: 8rem;   
+  text-align: justify;
+  justify-content: center;
 }
 
-.valores {
-  width: 36.8125rem;
-  color: #000;
-  font-family: Poppins;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: 0.0625rem;
-}
-.contenedorsobrenosotros{
-  margin-top: 4rem;
-}
-.sobrenosotros {
-  width: 36.8125rem;
-  color: #000;
-  font-family: Poppins;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: 0.0625rem;
-}
-.fondo-inicio {
-  background-image: url("../imagenes/fondoinicio.png");
-  width: 100%;
-  height: 44.875rem;
-  flex-shrink: 0;
-  padding: none;
+.texto-centrado {
+  font-size: 1rem;
+  margin-left: 2rem; 
+  margin-right: 2rem;   
+  text-align: center;
+  justify-content: center;
 }
 
+
+.logo-avances{
+  align-self: center;
+}
+
+.paleta-colores{
+width: 50%;
+align-self: center;
+}
+
+.arbol{
+width: 100%;
+align-self: center;
+}
+
+i{
+color: #347904;
+}
+
+.parrafo {
+  font-size: 1rem;
+  margin-left: 8rem; 
+  margin-right: 8rem;   
+  text-align: justify;
+  justify-content: center;
+}
+
+.contenedor-identidad {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;  
+}
+
+.item-identidad {
+  flex: 0 0 33.333333%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.item-identidad-imagen {
+  flex: 0 0 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.columna-home {
+  justify-content: center;
+}
+
+.logo-link {
+  display: none;
+}
+
+.logo {
+  width: 50%;
+}
+
+p{
+  font-size: 20px;
+}
+
+
+@media (max-width: 860px) {
+  .header {
+    display: none;
+  }
+
+  footer {
+      flex-direction: column;
+      padding: 0;
+      padding-top: 1rem;
+      justify-content: space-around;
+  }
+
+  header i{
+      color: #000;
+      font-size: 2rem;
+  }
+  
+  .hamb{
+    display: block;
+    cursor: pointer;
+    float: right;
+    padding: 5% 5%;
+  }
+  
+  .logo-link {
+      display: inline-block;
+      margin-left: 5%;
+      margin-top: 3%;
+  }
+
+  .texto {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .item-identidad {
+    flex: 0 0 100%;
+  }
+
+  .item-identidad-imagen {
+    flex: 0 0 100%;
+  }
+}
 
 
