--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -140,15 +140,10 @@ a {
   align-items: center;
   margin: 16px;
 }
-.fondo-imagen {
-  background: url(../imagenes/foto\ home.png) no-repeat center bottom;
-  background-size: contain;
-  background-position: right;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  padding-left: 5%;
-  justify-content: center;
+.fondo-inicio {
+  background-image: url(../imagenes/fondoinicio.jpg);
+  width: 100%;
+  height: 65rem;
 }
 
 footer {
@@ -237,7 +232,7 @@ header ul{
 h1 {
   margin-left: 8rem; 
   margin-right: 8rem; 
-  text-align: center;
+  text-align: left;
   margin-top: 5rem;
   color: #245501;
 }
