--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,314 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
-
-body {
-  background-color:#ffffff;
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 .navbar {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  background-color:  #FFF;
 }
 
-
-
-@media (min-width: 701px) {
-  .footer {
-    position: fixed;
-    bottom: 0px;
-  }
-
+a.nav-link {
+  justify-content: end;
 }
-
-@media (max-width: 700px) {
-
-  footer {
-    margin-top: 16px;
-  }
-}
-button {
-  font-family: "Poppins", sans-serif;
-  min-width: 25%;
-  padding: 2px;
-  color: #ffffff;
-  font-size: 19px;
-  border-radius: 10px;
-  border: 2px solid;
-  background: #1a4301;
-  cursor: pointer;
-}
-
-button:hover {
-  background: #000000;
-  color: #f8f9fa;
-}
-
-
-
-p {
-width: 44.75rem;
-color: #FFF;
-font-family: Poppins;
-font-size: 1.875rem;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-letter-spacing: 0.09375rem;
-}
-
-footer {
-  width: 100%;
-  margin-top: auto;
-  text-align: right;
-  border-top: 1px solid #e5ebf1;
-  background-color: white;
-}
-
-footer p {
-  font-size: 1rem;
-  color: #6c757d;
-  padding-right: 2%;
-}
-
-.header {
-  position: sticky;
-  top: 0;
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: row;
-  height: 14vh;
-  z-index: 1;
-  align-items: center;
-  justify-content: space-between;
-  padding-right: 1rem;
-  font-weight: bold;
-  border-bottom: 1px solid #eff3f7;
-}
-
-.header-mobile {
-  position: sticky;
-  z-index: 1;
-  top: 0;
-  background-color: #ffffff;
-  width: 100%;
-  border-bottom: 1px solid #eff3f7;
-}
-
-header a {
-  text-decoration: none;
-  color: #1a4301;
-  font-size: 1rem;
-}
-
-header ul{
-  list-style: none;
-}
-
-.hamb {
-  display: none;
-}
-
-.side-menu {
-  display: none;
-}
-
-.menu a{
-  color: #000;
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-.nav{
-  width: 100%;
-  position: fixed;
-  overflow: hidden;
-  background-color: #fff;
-  border-bottom: 1px solid #eff3f7;
-}
-
-.nav{
-  max-height: 0;
-  transition: max-height .5s ease-out;
-}
-
-.side-menu:checked ~ nav{
-  max-height: 50%;
-}
-
-.untercio{
-  background-image: url(../imagenes/untercio.jpg);
-  width: 100%;
-  height: 70rem;
-}
-.fondo-usuario{
-  background-image: url(../imagenes/fondousuario.jpg);
-  width: 100%;
-  height: 70rem;
-
-}
-.texto-negro{
-display: inline;
-color: #000;
-font-family: Poppins;
-font-size: 1.25rem;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-letter-spacing: 0.0625rem;
-width: 36.8125rem;
-
-}
-
-.titulos {
-color: #FFF;
-font-family: Poppins;
-font-size: 4.375rem;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-letter-spacing: 0.21875rem;
-width: 44.1875rem;
-height: 13.75rem;
-flex-shrink: 0;
-}
-
-h2 {
-      margin-left: 2rem; 
-      margin-right: 2rem; 
-      text-align: center;
-      margin-top: 2rem;
-      color: #245501;
-}
-
-.texto {
-  font-size: 1rem;
-  margin-left: 8rem; 
-  margin-right: 8rem;   
-  text-align: justify;
-  justify-content: center;
-}
-
-.texto-centrado {
-  font-size: 1rem;
-  margin-left: 2rem; 
-  margin-right: 2rem;   
-  text-align: center;
-  justify-content: center;
-}
-
-
-.logo-avances{
-  align-self: center;
-}
-
-.paleta-colores{
-width: 50%;
-align-self: center;
-}
-
-.arbol{
-width: 100%;
-align-self: center;
-}
-
-i{
-color: #347904;
-}
-
-.parrafo {
-  font-size: 1rem;
-  margin-left: 8rem; 
-  margin-right: 8rem;   
-  text-align: justify;
-  justify-content: center;
-}
-
-.contenedor-identidad {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;  
-}
-
-.item-identidad {
-  flex: 0 0 33.333333%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.item-identidad-imagen {
-  flex: 0 0 50%;
-  display: flex;
-  flex-direction: column;
-}
-
-.columna-home {
-  justify-content: center;
-}
-
-.logo-link {
-  display: none;
-}
-
-.logo {
-  width: 50%;
-}
-
-p{
-  font-size: 20px;
-}
-
-
-@media (max-width: 860px) {
-  .header {
-    display: none;
-  }
-
-  footer {
-      flex-direction: column;
-      padding: 0;
-      padding-top: 1rem;
-      justify-content: space-around;
-  }
-
-  header i{
-      color: #000;
-      font-size: 2rem;
-  }
-  
-  .hamb{
-    display: block;
-    cursor: pointer;
-    float: right;
-    padding: 5% 5%;
-  }
-  
-  .logo-link {
-      display: inline-block;
-      margin-left: 5%;
-      margin-top: 3%;
-  }
-
-  .texto {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-
-  .item-identidad {
-    flex: 0 0 100%;
-  }
-
-  .item-identidad-imagen {
-    flex: 0 0 100%;
-  }
-
-}
-.sin-padding {
-  padding-left: 0% !important;
-  padding-right: 0% !important;
-}
-
-
