--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,7 +1,6 @@
 
 
 footer {
-  border-top: 1px solid var(--Color-5, #adb5bd);
-  color: #6c757d;
+  border-top: 1px solid var(--Color-5, #ADB5BD);
 }
 
