--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -13,7 +13,12 @@ letter-spacing: 0.06875rem;
 }
 
 
+@media (max-width:700px){
+p{
+	font-size: ;
+}
 
+}
 @media (min-width: 701px) {
 
   .footer {
