--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -14,11 +14,22 @@ letter-spacing: 0.06875rem;
 
 
 @media (max-width:700px){
-p{
-	font-size: ;
+.versionpequena h1{
+	font-size: 0.005em !important ;
+	column-count: 1;
+    text-align: left;
+	}
+.container{
+	flex-direction: column; /* Stack items vertically */
+	align-items: left;
+	columns: 1;}
+
+img {
+	width: 100%;
+}
 }
 
-}
+
 @media (min-width: 701px) {
 
   .footer {
