--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,66 +1,68 @@
-
-
 footer {
-  border-top: 1px solid var(--Color-5, #ADB5BD);
+  border-top: 1px solid var(--Color-5, #adb5bd);
 }
 
-.texto{
-color: #6C757D;
-text-align: center;
-font-style: normal;
-line-height: normal;
-letter-spacing: 0.06875rem;
+.texto {
+  color: #6c757d;
+  text-align: center;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.06875rem;
+}
+.derechosreservados{
+	color: #6C757D;
+	font-size: 1.25rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
 }
 
 
-@media (max-width:700px){
-.versionpequena h1{
-	font-size: 0.005em !important ;
-	column-count: 1;
+@media (max-width: 700px) {
+  .versionpequena h1 {
+    font-size: 0.005em !important ;
+    column-count: 1;
     text-align: left;
-	}
-.container{
-	flex-direction: column; /* Stack items vertically */
-	align-items: left;
-	columns: 1;}
+  }
+  .container {
+    flex-direction: column; /* Stack items vertically */
+    align-items: left;
+    columns: 1;
+  }
 
-img {
-	width: 100%;
+  img {
+    width: 100%;
+  }
 }
-}
-
 
 @media (min-width: 701px) {
-
   .footer {
     position: fixed;
     bottom: 0px;
   }
 
-  
+  .carousel-inner .carousel-item > div:first-child {
+    display: block;
+  }
 
+  .carousel-inner .carousel-item.active,
+  .carousel-inner .carousel-item-next,
+  .carousel-inner .carousel-item-prev {
+    display: flex;
+  }
 
-.carousel-inner .carousel-item > div:first-child {
-  display: block;
+  .carousel-inner .carousel-item-end.active,
+  .carousel-inner .carousel-item-next {
+    transform: translateX(25%);
+  }
+
+  .carousel-inner .carousel-item-start.active,
+  .carousel-inner .carousel-item-prev {
+    transform: translateX(-25%);
+  }
+
+  .carousel-inner .carousel-item-end,
+  .carousel-inner .carousel-item-start {
+    transform: translateX(0);
+  }
 }
-
-.carousel-inner .carousel-item.active,
-.carousel-inner .carousel-item-next,
-.carousel-inner .carousel-item-prev {
-display: flex;
-}
-
-.carousel-inner .carousel-item-end.active,
-		.carousel-inner .carousel-item-next {
-			transform: translateX(25%);
-		}
-
-		.carousel-inner .carousel-item-start.active, 
-		.carousel-inner .carousel-item-prev {
-			transform: translateX(-25%);
-		}
-
-	.carousel-inner .carousel-item-end,
-	.carousel-inner .carousel-item-start { 
-		transform: translateX(0);
-	}
