--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -18,12 +18,15 @@ footer {
 }
 
 
-@media (max-width: 700px) {
-  .versionpequena h1 {
-    font-size: 0.005em !important ;
-    column-count: 1;
-    text-align: left;
+
+@media (max-width: 1257px) {
+    .hide-on-700px {
+      display: none !important;
+    }
+  .versiondesktop{
+    background-image: url("./imagenes/fondoinicio.png");
   }
+
   .container {
     flex-direction: column; /* Stack items vertically */
     align-items: left;
@@ -34,35 +37,21 @@ footer {
     width: 100%;
   }
 }
-
-@media (min-width: 701px) {
-  .footer {
-    position: fixed;
-    bottom: 0px;
+@media (max-width: 1257px) {
+  .hide-on-700px {
+    display: none !important;
   }
+.versiondesktop{
+  background-image: url("./imagenes/fondoinicio.png");
+}
 
-  .carousel-inner .carousel-item > div:first-child {
-    display: block;
-  }
+.container {
+  flex-direction: column; /* Stack items vertically */
+  align-items: left;
+  columns: 1;
+}
 
-  .carousel-inner .carousel-item.active,
-  .carousel-inner .carousel-item-next,
-  .carousel-inner .carousel-item-prev {
-    display: flex;
-  }
-
-  .carousel-inner .carousel-item-end.active,
-  .carousel-inner .carousel-item-next {
-    transform: translateX(25%);
-  }
-
-  .carousel-inner .carousel-item-start.active,
-  .carousel-inner .carousel-item-prev {
-    transform: translateX(-25%);
-  }
-
-  .carousel-inner .carousel-item-end,
-  .carousel-inner .carousel-item-start {
-    transform: translateX(0);
-  }
+img {
+  width: 100%;
+}
 }
