--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -2,6 +2,7 @@ footer {
   border-top: 1px solid var(--Color-5, #adb5bd);
 }
 
+
 .texto {
   color: #6c757d;
   text-align: center;
@@ -17,7 +18,30 @@ footer {
 	line-height: normal;
 }
 
+.carousel-inner .carousel-item > div:first-child {
+  display: block;
+}
 
+.carousel-inner .carousel-item.active,
+.carousel-inner .carousel-item-next,
+.carousel-inner .carousel-item-prev {
+display: flex;
+}
+
+.carousel-inner .carousel-item-end.active,
+		.carousel-inner .carousel-item-next {
+			transform: translateX(25%);
+		}
+
+		.carousel-inner .carousel-item-start.active, 
+		.carousel-inner .carousel-item-prev {
+			transform: translateX(-25%);
+		}
+
+	.carousel-inner .carousel-item-end,
+	.carousel-inner .carousel-item-start { 
+		transform: translateX(0);
+	}
 
 @media (min-width: 1024px)  { 
   .fondo-inicio-desktop {
@@ -57,5 +81,7 @@ footer {
     align-items: left;
     columns: 1;
   }
-
+  .margen{
+    margin-top:20em;
+  }
 }
