--- a/estilos/test.css
+++ b/estilos/test.css
@@ -1,31 +1,13 @@
-@media (max-width: 767px) {
-    
-    .carousel-inner .carousel-item > div:first-child {
-        display: block;
+
+
+@media (max-width:700px){
+    .hide-mobile{
+        display:none;
     }
 }
 
-.carousel-inner .carousel-item.active,
-.carousel-inner .carousel-item-next,
-.carousel-inner .carousel-item-prev {
-    display: flex;
-}
-
-/* medium and up screens */
-@media (min-width: 768px) {
-
-    .carousel-inner .carousel-item-end.active,
-    .carousel-inner .carousel-item-next {
-        transform: translateX(25%);
+@media (min-width:701px){
+    .hide-mobile{
+        display:block;
     }
-
-    .carousel-inner .carousel-item-start.active, 
-    .carousel-inner .carousel-item-prev {
-        transform: translateX(-25%);
-    }
-}
-
-.carousel-inner .carousel-item-end,
-.carousel-inner .carousel-item-start { 
-    transform: translateX(0);
 }
